# impact-eval-2026

./: pyproject.toml
data/: class_size.dta
src/: export-tables.ipynb  implementing-methods.ipynb  replicate-findings.ipynb
src/.ipynb_checkpoints/: implementing-methods-checkpoint.ipynb  replicate-findings-checkpoint.ipynb
