[project]
name = "impact-eval-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "v3natio",email = "72844565+v3natio@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab (>=4.5.4,<5.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "linearmodels (>=7.0,<8.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "cvxpy (>=1.8.1,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
